Open an issue - let's chat.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Working on this repo using my personal account @ghost081280 once ready I'll deploy over here. 🦑
+Working on SquidBay using my personal account @ghost081280 once ready I'll deploy it over here. 🦑
